--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "express": "^4.21.2",
     "mysql2": "^3.12.0",
     "sequelize": "^6.37.5",
-    "sequelize-cli": "^6.6.2"
+    "sequelize-cli": "^6.6.2",
+    "sistema_ctp": "file:"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
