--- a/config/config.json
+++ b/config/config.json
@@ -1,8 +1,8 @@
 {
   "development": {
-    "username": "andre",
-    "password": "andre",
-    "database": "ctp",
+    "username": "root",
+    "password": "aluno123",
+    "database": "sistema_ctp",
     "host": "127.0.0.1",
     "dialect": "mysql"
   },
