alter db user and password

--- a/config/config.json
+++ b/config/config.json
@@ -1,7 +1,7 @@
 {
   "development": {
-    "username": "root",
-    "password": "aluno123",
+    "username": "andre",
+    "password": "andre",
     "database": "sistema_ctp",
     "host": "127.0.0.1",
     "dialect": "mysql"
